# simple-crud-py-api

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  __main__.py  requirements.txt  setup.cfg  setup.py
mysite/mysite/: settings.py  urls.py
mysite/polls/: urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
