[metadata]
name = simple-crud-py-api
version = 0.0.1
author = Lucas Machado
description = Simple CRUD API developed in Python
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = one, two
license = MIT

[options]
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
packages = find:
include_package_data=True

[options.packages.find]
where=sr
exclude=tests*
